@@ -26,6 +26,9 @@ extern int sound_freq;
 extern int sound_stereo;
 extern int sound_stereo_acb;
 
+#ifdef SZ81	/* Added by Thunor */
+extern void sound_ay_setvol(void);
+#endif
 extern void sound_init(void);
 extern void sound_end(void);
 extern void sound_frame(void);
